Modified git_commands