@@ -1,24 +1,40 @@
 package ru.git_test.run;
 
-import java.io.File;
+
 import java.io.IOException;
 public class Git_commands {	
-	public void gitInit(File path) throws IOException {
-		runCommand(path, "git init");
+	
+	//methods with git commands
+	public void gitInit() throws IOException {
+		runCommand("git init");
 	}
-	public void gitAdd(File path) throws IOException {
-		runCommand(path, "git add .");
+	
+	public void gitAdd() throws IOException {
+		runCommand("git add .");
+		System.out.println("complete 'git add .'");
 	}
-	public void gitCommit(File path) throws IOException {
-		runCommand(path, "git commit -m'init'");
+	
+	public void gitCommit() throws IOException {
+		runCommand("git commit -m");
+		System.out.println("complete 'git commit -m'");
 	}
-	public void gitPush(File path) throws IOException {
-		runCommand(path, "git push");
+	
+	public void gitPush() throws IOException {
+		runCommand("git push");
 	}
-	public void runCommand (File path, String commands){	
-		try {
-			ProcessBuilder pb = new ProcessBuilder().command(commands).directory(path);
-			Process p = pb.start();
+	
+	//run command git
+	public void runCommand (String commands){	
+		try {			
+			Process p = Runtime.getRuntime().exec(commands);
+			
+			try {
+				//wait for process complete
+				p.waitFor();
+			} catch (InterruptedException e) {
+				
+				e.printStackTrace();
+			}
 		} catch (IOException e) {			
 			e.printStackTrace();
 		}
